--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "toggle-css",
+    "name": "CSS Toggler",
     "version": "0.1.0",
 
     "description": "Browser extension to quickly toggle CSS.",
